[gd_scene load_steps=3 format=3 uid="uid://dqio0786dt6ff"]

[ext_resource type="Script" path="res://Scenes/Components/Level/level.gd" id="1_51hyw"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_htt4t"]

[node name="LevelWrapper" type="Control"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_51hyw")

[node name="Button" type="Button" parent="."]
self_modulate = Color(1, 0, 0, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_default_cursor_shape = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_htt4t")

[node name="Margin" type="MarginContainer" parent="Button"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 10

[node name="Locked" type="VBoxContainer" parent="Button/Margin"]
layout_mode = 2

[node name="LockedPrice" type="Label" parent="Button/Margin/Locked"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "DEFAULT PRICE"
horizontal_alignment = 1

[node name="LockedSC" type="ScrollContainer" parent="Button/Margin/Locked"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="LockedAddition" type="VBoxContainer" parent="Button/Margin/Locked/LockedSC"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Unlocked" type="VBoxContainer" parent="Button/Margin"]
visible = false
layout_mode = 2

[node name="UnlockedLevel" type="Label" parent="Button/Margin/Unlocked"]
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 25
text = "NIVEAU DEFAULT"
horizontal_alignment = 1

[node name="UnlockedSC" type="ScrollContainer" parent="Button/Margin/Unlocked"]
layout_mode = 2
size_flags_vertical = 3
horizontal_scroll_mode = 0

[node name="UnlockedAddition" type="VBoxContainer" parent="Button/Margin/Unlocked/UnlockedSC"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
